Added support for the GLL sentence structure.  Made the LatLong class abstract and added concrete Latitude and Longitude classes with different logic for converting to decimal latitude and longitude. Removed the reference to the javax Pair class and created my own since this disappears in later java versions.  Added support for UTCTime fields.